[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/simple_elements/fire.png" type="Texture" id=1]
[ext_resource path="res://assets/simple_elements/earth.png" type="Texture" id=2]
[ext_resource path="res://assets/simple_elements/air.png" type="Texture" id=3]
[ext_resource path="res://assets/simple_elements/water.png" type="Texture" id=4]
[ext_resource path="res://scripts/Elements.gd" type="Script" id=5]

[node name="Elements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1136.0
margin_bottom = -860.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirContainer" type="HBoxContainer" parent="Wrapper"]
margin_right = 83.0
margin_bottom = 40.0

[node name="AirIcon" type="TextureRect" parent="Wrapper/AirContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="AirLabel" type="Label" parent="Wrapper/AirContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 83.0
margin_bottom = 27.0
text = "Air: 0/0"

[node name="EarthContainer" type="HBoxContainer" parent="Wrapper"]
margin_left = 87.0
margin_right = 184.0
margin_bottom = 40.0

[node name="EarthIcon" type="TextureRect" parent="Wrapper/EarthContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="EarthLabel" type="Label" parent="Wrapper/EarthContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 97.0
margin_bottom = 27.0
text = "Earth: 0/0"

[node name="FireContainer" type="HBoxContainer" parent="Wrapper"]
margin_left = 188.0
margin_right = 277.0
margin_bottom = 40.0

[node name="FireIcon" type="TextureRect" parent="Wrapper/FireContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="FireLabel" type="Label" parent="Wrapper/FireContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 89.0
margin_bottom = 27.0
text = "Fire: 0/0"

[node name="WaterContainer" type="HBoxContainer" parent="Wrapper"]
margin_left = 281.0
margin_right = 384.0
margin_bottom = 40.0

[node name="WaterIcon" type="TextureRect" parent="Wrapper/WaterContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="WaterLabel" type="Label" parent="Wrapper/WaterContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 103.0
margin_bottom = 27.0
text = "Water: 0/0"
